[gd_scene load_steps=4 format=3 uid="uid://i17tol7rfss4"]

[ext_resource type="PackedScene" uid="uid://d3ad5fq0ih4y4" path="res://game/scenes/defence/ui/tower_selecter/selecter_item.tscn" id="1_j375g"]
[ext_resource type="Script" path="res://game/scenes/defence/ui/tower_selecter/tower_selecter.gd" id="1_kqvum"]
[ext_resource type="Texture2D" uid="uid://dw4asl67s2250" path="res://icon.svg" id="3_e33mn"]

[node name="TowerSelecter" type="HBoxContainer"]
offset_left = 6.0
offset_top = 6.0
offset_right = 630.0
offset_bottom = 50.0
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 4
script = ExtResource("1_kqvum")

[node name="BG" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(500, 44)
layout_mode = 2
mouse_filter = 2

[node name="BuildButtons" type="HBoxContainer" parent="BG"]
custom_minimum_size = Vector2(492, 44)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_constants/separation = 4

[node name="SelecterItem" parent="BG/BuildButtons" instance=ExtResource("1_j375g")]
layout_mode = 2

[node name="SelecterItem2" parent="BG/BuildButtons" instance=ExtResource("1_j375g")]
layout_mode = 2

[node name="SelecterItem3" parent="BG/BuildButtons" instance=ExtResource("1_j375g")]
layout_mode = 2

[node name="SelecterItem4" parent="BG/BuildButtons" instance=ExtResource("1_j375g")]
layout_mode = 2

[node name="ClearItem" type="Button" parent="."]
visible = false
modulate = Color(1, 1, 0.972549, 1)
custom_minimum_size = Vector2(120, 44)
layout_mode = 2
focus_mode = 0
shortcut_in_tooltip = false

[node name="VBoxContainer" type="VBoxContainer" parent="ClearItem"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="ClearItem/VBoxContainer"]
visible = false
layout_mode = 2
vertical_alignment = 2

[node name="Texture" type="TextureRect" parent="ClearItem/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("3_e33mn")
expand_mode = 3
stretch_mode = 5

[node name="NumIndicate" type="Label" parent="ClearItem/VBoxContainer/Texture"]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 18.0
offset_bottom = 22.0
text = "R"

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 2
focus_mode = 0
text = "toggle size"

[connection signal="pressed" from="ClearItem" to="." method="_pressed_button" binds= [-1]]
[connection signal="pressed" from="Button" to="." method="_on_toggle_button_pressed"]
